fix(welcome): pre overflow on mobile

--- a/assets/styles/welcome.scss
+++ b/assets/styles/welcome.scss
@@ -3,6 +3,7 @@
   border-radius: 0.25em;
   background: #00000088;
   color: #83a598;
+  overflow: auto;
 }
 
 main {
